--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Quoty!</h1>
   <div class="row">
     <div class="col-md-5">
       <app-forms (addQuote)="addNewQuote($event)"></app-forms>
@@ -6,15 +7,15 @@
     <div class="col-md-7">
       <div class="display-quotes" *ngFor='let quote of quotes, let i = index'>
         <div class="details">
-          <p>{{quote.author}}</p>
-          <br>
+          
 
         <div>
-          <h4 class="style">{{quote.enterQuote}}<br> Date due  {{quote.submitDate | date}}</h4>
+          <h4 class="style">{{quote.enterQuote}}<br> Posted on  {{quote.submitDate | date}}</h4>
         </div>
+        <p>~{{quote.author}}</p>
+        <br>
 
-
-          <button class="btn-info" (click)='toggleDetails(i)' type="button" name="button">more </button>
+          <button class="btn-info" (click)='toggleDetails(i)' type="button" name="button">Show Details </button>
           <br>
 
           <app-details *ngIf="quote.showDetails" [quote]='quote' (isDelete)='deleteQuote($event, i)' (isPlus)='plusVote($event, i)'
