--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 body{
-    background-image: url("img/img1.jpg");
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/img1.jpg");
 }
