--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 body{
     background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/img1.jpg");
+    color: white;
+}
+
+#but{
+    margin: 10px;
 }
