--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -3,7 +3,7 @@
 <p>Published by {{quote.submitter}} </p>
 <br>
 <p>Posted on  {{quote.submitDate | date}}</p>
-<button class="btn btn-primary" (click)='votePlus(true)' type="button" name="button"><img src="https://image.flaticon.com/icons/svg/25/25423.svg" alt=""width="40px" height="40px"> {{quote.upVote}}</button>
-<button class="btn btn-primary" (click)='voteMinus(true)' type="button" name="button" > <img src="https://image.flaticon.com/icons/svg/25/25395.svg" alt="" width="40px" height="40px"> {{quote.downVote}}</button>
-<button class="btn-danger" (click)='quoteDelete(true)' type="button" name="button"><img src="https://image.flaticon.com/icons/svg/39/39220.svg" alt="" width="40px" height="40px"></button>
+<button id="but" class="btn btn-primary" (click)='votePlus(true)' type="button" name="button"><img src="https://image.flaticon.com/icons/svg/25/25423.svg" alt=""width="20px" height="20px"> {{quote.upVote}}</button>
+<button id="but" class="btn btn-primary" (click)='voteMinus(true)' type="button" name="button" > <img src="https://image.flaticon.com/icons/svg/25/25395.svg" alt="" width="20px" height="20px"> {{quote.downVote}}</button>
+<button id="but" class="btn-danger" (click)='quoteDelete(true)' type="button" name="button"><img src="https://image.flaticon.com/icons/svg/39/39220.svg" alt="" width="30px" height="30px"></button>
 </div>
