--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 body{
-    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/img1.jpg");
+    background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("img/img1.jpg");
     color: white;
+    font-size: 20px;
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Baloo Chettan', cursive;
 }
 
 #but{
