--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,4 +1,5 @@
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Baloo+Chettan|Playfair+Display" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Baloo+Chettan|Playfair+Display|Varela+Round" rel="stylesheet">
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-5">
