--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Abril Fatface', cursive;
     font-family: 'Playfair Display', serif;
     font-family: 'Baloo Chettan', cursive;
+    font-family: 'Varela Round', sans-serif;
 }
 
 #but{
