Link google fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,11 @@ body{
 #but{
     margin: 10px;
 }
+.one1{
+    text-align: center;
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Baloo Chettan', cursive;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Varela Round', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+}
